FIX: ZEUIRenderer has been migrated to Direct3D 11. REM: Old and unmaintained code have been removed from ZEUI. FIX: Many naming and coding style fixes has been made on ZEUI. CHG: ZEFontResource has been renamed to ZEUIFont. CHG: ZEFontResourceDynamic has renamed to ZEUIFontTrueType. CHG: ZEFontResourceBitmap has been removed. ADD: Partial texture update has been added to ZEGRTexture2D. ADD: Shader constant buffer friendly storage class ZEMatrix3x3Shader hass been added.
svn path=/branches/v0.6.2-Graphics/; revision=1958

--- a/Source/ZEEngine/CMakeLists.txt
+++ b/Source/ZEEngine/CMakeLists.txt
@@ -58,7 +58,7 @@ add_subdirectory(ZEParticle)
 add_subdirectory(ZEPhysics)
 add_subdirectory(ZESound)
 add_subdirectory(ZEAtmosphere)
-#add_subdirectory(ZEUI)
+add_subdirectory(ZEUI)
 #add_subdirectory(ZETerrain)
 
 ze_add_source(ZEAPI.h 						Sources Headers)
@@ -70,13 +70,13 @@ ze_add_source(ZESDK.cpp 					Sources)
 ze_add_library(TARGET ZEEngine 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
-	LIBS ZECore ZEGraphics ZEInput ZEInterior ZEParticle ZEMeta ZEPhysics ZESound ZEGame ZEAI ZETexture ZERenderer ZEModel ZEModules ZEAtmosphere)
+	LIBS ZECore ZEGraphics ZEInput ZEInterior ZEParticle ZEMeta ZEPhysics ZESound ZEGame ZEAI ZETexture ZERenderer ZEModel ZEModules ZEAtmosphere ZEUI)
 
 ze_add_executable(TARGET ZE 
 	SOURCES ${Sources} ZEMain.cpp ZECore/ZEWindowResources.rc
 	LIBS ZEEngine
 	INSTALL)
 
-ze_meta_register(LIBS ZECore ZEInput ZEInterior ZEParticle ZEMeta ZEPhysics ZESound ZEGame ZEAI ZETerrain ZETexture ZERenderer ZEModel ZEModules ZEAtmosphere ZEGraphics)
+ze_meta_register(LIBS ZECore ZEGraphics ZEInput ZEInterior ZEParticle ZEMeta ZEPhysics ZESound ZEGame ZEAI ZETexture ZERenderer ZEModel ZEModules ZEAtmosphere ZEUI)
 
 #ze_combine_libraries(ZEEngine LIBS ZEEngine ZEAI ZECore ZEGame ZEGraphics ZETexture ZEInput ZEMap ZEMeta ZEModel ZEParticle ZEPhysics ZESound ZEUI ZETerrain)
