--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -117,6 +117,8 @@ ze_add_source(ZERNStageAntiAliasing.h				Sources Headers ZEMC)
 ze_add_source(ZERNStageAntiAliasing.cpp				Sources)
 ze_add_source(ZERNStageDebug.h 						Sources Headers ZEMC)
 ze_add_source(ZERNStageDebug.cpp					Sources)
+ze_add_source(ZERNStage2D.h 						Sources Headers ZEMC)
+ze_add_source(ZERNStage2D.cpp						Sources)
 
 ze_add_library(TARGET ZERenderer 
 	SOURCES ${Sources}
