--- a/Source/ZEEngine/ZEUI/CMakeLists.txt
+++ b/Source/ZEEngine/ZEUI/CMakeLists.txt
@@ -35,15 +35,12 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-ze_add_source(ZEFreeType.h                  Sources Headers)
-ze_add_source(ZEFontResourceBitmap.cpp				Sources)
-ze_add_source(ZEFontResourceBitmap.h				Sources Headers ZEMC)
-ze_add_source(ZEFontResourceDynamic.cpp				Sources)
-ze_add_source(ZEFontResourceDynamic.h				Sources Headers ZEMC)
-ze_add_source(ZEFontResource.cpp					Sources)
-ze_add_source(ZEFontResource.h						Sources Headers ZEMC)
-ze_add_source(ZEIUCheckBoxControl.cpp				Sources)
-ze_add_source(ZEIUCheckBoxControl.h					Sources Headers ZEMC)
+ze_add_source(ZEUIFontTrueType.cpp					Sources)
+ze_add_source(ZEUIFontTrueType.h					Sources Headers ZEMC)
+ze_add_source(ZEUIFont.cpp							Sources)
+ze_add_source(ZEUIFont.h							Sources Headers ZEMC)
+ze_add_source(ZEUICheckBoxControl.cpp				Sources)
+ze_add_source(ZEUICheckBoxControl.h					Sources Headers ZEMC)
 ze_add_source(ZEUIBorderedFrameControl.cpp			Sources)
 ze_add_source(ZEUIBorderedFrameControl.h			Sources Headers ZEMC)
 ze_add_source(ZEUIButtonControl.cpp					Sources)
@@ -68,18 +65,10 @@ ze_add_source(ZEUIVerticalSliderControl.cpp			Sources)
 ze_add_source(ZEUIVerticalSliderControl.h			Sources Headers ZEMC)
 ze_add_source(ZEUTextEditControl.cpp				Sources)
 ze_add_source(ZEUTextEditControl.h					Sources Headers ZEMC)
-ze_add_source(ZEUISequencePlayer.cpp				Sources)
-ze_add_source(ZEUISequencePlayer.h					Sources Headers ZEMC)
-ze_add_source(ZEUISceneStatisticsControl.cpp		Sources)
-ze_add_source(ZEUISceneStatisticsControl.h			Sources Headers)
-#ze_add_source(ZEUIInteriorStatisticsControl.cpp	Sources)
-#ze_add_source(ZEUIInteriorStatisticsControl.h		Sources Headers)
 ze_add_source(ZEUILabel.cpp							Sources)
 ze_add_source(ZEUILabel.h							Sources Headers ZEMC)
 ze_add_source(ZEUITextCursor.cpp					Sources)
 ze_add_source(ZEUITextCursor.h						Sources Headers ZEMC)
-ze_add_source(ZEUIDebugDrawTag.cpp					Sources)
-ze_add_source(ZEUIDebugDrawTag.h					Sources Headers)
 
 
 ze_add_library(TARGET ZEUI
