CHG: 3ds Max projects has been combined into single ZE3dsMaxExport project. CHG: ZEToolComponents has been removed. CHG: ZEProgressDialog and ZEResourceConfigurator has been moved into ZE3dsMaxExport proje FIX: ZEPlatform.h recompile problem has been fixed.
svn path=/branches/v0.6.5-Editor/; revision=1962

--- a/Source/ZETools/CMakeLists.txt
+++ b/Source/ZETools/CMakeLists.txt
@@ -42,9 +42,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/ZEToolComponents)
 
 find_package(Qt5 COMPONENTS Widgets)
 
-ze_add_module(ZE3dsMax)
+ze_add_module(ZE3dsMaxExporter)
 ze_add_module(ZEFontBaker)
-ze_add_module(ZEToolComponents)
 ze_add_module(ZECrashReport)
 ze_add_module(ZESceneConverter)
 ze_add_module(ZEMLEditor)
