REN: ZEDViewPort has been renamed to ZEDViewport. ADD: New mouse and keyboard input event mechanism have been defined. REM: Selection and transformation code has been disabled in ZEDViewport. They will be moved to its own classes and will be connected with ZEDViewport input code.
svn path=/branches/v0.6.5-Editor/; revision=1964

--- a/Source/ZEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEditor/ZEDCore/CMakeLists.txt
@@ -55,14 +55,16 @@ ze_add_source(ZEDObjectWrapper.cpp				Sources)
 ze_add_source(ZEDObjectWrapper.h				Sources)
 ze_add_source(ZEDSelectionManager.cpp			Sources)
 ze_add_source(ZEDSelectionManager.h				Sources)
-ze_add_source(ZEDViewPort.cpp					Sources)
-ze_add_source(ZEDViewPort.h						Sources QtMocs)
 ze_add_source(ZEDEntityWrapper.cpp				Sources)
 ze_add_source(ZEDEntityWrapper.h				Sources)
 ze_add_source(ZEDModule.cpp						Sources)
 ze_add_source(ZEDModule.h						Sources)
 ze_add_source(ZEDCore.cpp						Sources)
 ze_add_source(ZEDCore.h							Sources)
+ze_add_source(ZEDViewport.cpp					Sources)
+ze_add_source(ZEDViewport.h						Sources QtMocs)
+ze_add_source(ZEDViewportInput.cpp				Sources)
+ze_add_source(ZEDViewportInput.h				Sources)
 
 qt5_wrap_cpp (QtMocFiles ${QtMocs})
 
