CHG: ZELCEncryption has been moved to ZEFoundation and renamed to ZEEncription. CHG: ZEDViewport has been migrated to ZED3D11. ADD: ZEDViewportManager, which control rendering of ZEDViewport, has been added. FIX: Many bug fixes and improvements have been done on ZEDViewport. ADD: Wrapped window resize function ZEGRWindow::WrapperResized has been added.
svn path=/branches/v0.6.5-Editor/; revision=1966

--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -96,10 +96,12 @@ ze_add_source(ZEVersion.cpp				Sources)
 ze_add_source(ZEVersion.h				Sources Headers)
 ze_add_source(ZEInitializable.cpp		Sources)
 ze_add_source(ZEInitializable.h			Sources Headers)
+ze_add_source(ZEEncryption.cpp			Sources)
+ze_add_source(ZEEncryption.h			Sources Headers)
 
 ze_add_library(TARGET ZEFoundation
 	COMBINE
-	LIBS ZEDS ZEMath ZESerialization ZEStateMachine ZEFile ZEMacro ZESpatial ZESerialPort ZETest ZEThread ZESocket ZEML ZERegEx ZECompression ZEPointer ZEMeta
+	LIBS ZEDS ZEMath ZESerialization ZEStateMachine ZEFile ZEMacro ZESpatial ZESerialPort ZETest ZEThread ZESocket ZEML ZERegEx ZECompression ZEPointer ZEMeta libCryptopp
 	SOURCES ${Sources} 
 	HEADERS ${Headers})
 
