--- a/Source/ZETools/ZEDSHShaderEditor/CMakeLists.txt
+++ b/Source/ZETools/ZEDSHShaderEditor/CMakeLists.txt
@@ -60,14 +60,14 @@ source_group("Generated" FILES ${QtMocFiles} ${QtUIFiles})
 
 ze_add_executable(TARGET ZEDSHShaderEditor
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles}
-	LIBS ZEFoundation ZEGraphics ZEDirect3D11 ZEProtect)
+	LIBS ZEFoundation ZEGraphics ZEDirect3D11)
 
 qt5_use_modules(ZEDSHShaderEditor Widgets)
 
 ze_add_source(ZEDSHShaderEditor.def			SourcesDLL)
 ze_add_library(TARGET ZEDSHShaderEditorDLL
 	SOURCES ${SourcesDLL} ${Sources} ${QtMocFiles} ${QtUIFiles}
-	LIBS ZEFoundation ZEGraphics ZEDirect3D11 ZEProtect
+	LIBS ZEFoundation ZEGraphics ZEDirect3D11
 	DLL)
 
 qt5_use_modules(ZEDSHShaderEditorDLL Widgets)
