--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -71,7 +71,7 @@ ze_add_source(ZERNShaderSlots.h 					Sources Headers)
 ze_add_source(ZERNMaterial.cpp 						Sources)
 ze_add_source(ZERNMaterial.h 						Sources Headers ZEMC)
 ze_add_source(ZERNSimpleMaterial.cpp 				Sources)
-ze_add_source(ZERNSimpleMaterial.h 					Sources Headers)
+ze_add_source(ZERNSimpleMaterial.h 					Sources Headers ZEMC)
 ze_add_source(ZERNFixedMaterial.cpp 				Sources)
 ze_add_source(ZERNFixedMaterial.h 					Sources Headers ZEMC)
 ze_add_source(ZERNParticleMaterial.cpp 				Sources)
