FIX: Many fixes and improvements have been made on ZEDViewport.cpp FIX: Grid draw order has been fixed. FIX: Many problems in ZERNSimpleMaterial has been fixed. FIX: New Bind methods has been added to ZERNStage for making input output binding a bit more standard.
svn path=/branches/v0.6.5-Editor/; revision=1969

--- a/Source/ZEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEditor/ZEDCore/CMakeLists.txt
@@ -67,6 +67,8 @@ ze_add_source(ZEDViewportInput.cpp				Sources)
 ze_add_source(ZEDViewportInput.h				Sources)
 ze_add_source(ZEDViewportManager.cpp			Sources)
 ze_add_source(ZEDViewportManager.h				Sources)
+ze_add_source(ZEDViewportController.cpp			Sources)
+ze_add_source(ZEDViewportController.h			Sources)
 
 qt5_wrap_cpp (QtMocFiles ${QtMocs})
 
