MOD: Ray Casting system has been expanded, integrated, redesigned and reimplemented. ADD: Object selection has been implemented in ZEEditor. ADD: ZERNScreenUtilities class, which contains screen tranform and ray casting helper functions, has been implemented. REM: ZEDScene has been removed in favor of ZEDSceneWrapper.
svn path=/branches/v0.6.5-Editor/; revision=1974

--- a/Source/ZEEngine/ZEInterior/CMakeLists.txt
+++ b/Source/ZEEngine/ZEInterior/CMakeLists.txt
@@ -38,11 +38,11 @@ cmake_minimum_required (VERSION 2.8)
 ze_add_source(ZEInterior.cpp				Sources)
 ze_add_source(ZEInterior.h					Sources Headers ZEMC)
 ze_add_source(ZEInteriorDoor.cpp			Sources)
-ze_add_source(ZEInteriorDoor.h				Sources Headers)
+ze_add_source(ZEInteriorDoor.h				Sources Headers ZEMC)
 ze_add_source(ZEInteriorRoom.cpp			Sources)
-ze_add_source(ZEInteriorRoom.h				Sources Headers)
+ze_add_source(ZEInteriorRoom.h				Sources Headers ZEMC)
 ze_add_source(ZEInteriorHelper.cpp			Sources)
-ze_add_source(ZEInteriorHelper.h			Sources Headers)
+ze_add_source(ZEInteriorHelper.h			Sources Headers ZEMC)
 ze_add_source(ZEInteriorResource.cpp		Sources)
 ze_add_source(ZEInteriorResource.h			Sources Headers)
 
