CHG: In ZE3dsMaxExporter project, wide character string literals have been changed with ZEString. CHG: In ZE3dsMaxExporter project, fixes have been made in logging functionalities regarding wrong character display on UIs.
svn path=/branches/v0.6.5-Editor/; revision=1976

--- a/Source/ZETools/ZE3dsMaxExporter/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMaxExporter/CMakeLists.txt
@@ -118,11 +118,13 @@ qt5_wrap_cpp(QtMocFiles ${QtMocs})
 
 source_group("Generated" FILES ${QtResourceFiles} ${QtMocFiles} ${QtUIFiles})
 
-ze_add_library(TARGET ZE3dsMaxExporter 
+ze_add_library(TARGET ZE3dsMaxPlugin
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles}
 	ZEFC ${ZEFC}
-	LIBS ZEFoundation lib3dsMax2015)
+	LIBS ZEFoundation lib3dsMax2015
+	DLL)
 
-qt5_use_modules(ZE3dsMaxExporter Widgets)
+qt5_use_modules(ZE3dsMaxPlugin Widgets)
 
-set_property(TARGET ZE3dsMaxExporter APPEND PROPERTY COMPILE_FLAGS "/GR")
+set_property(TARGET ZE3dsMaxPlugin APPEND PROPERTY COMPILE_FLAGS "/GR")
+set_property(TARGET ZE3dsMaxPlugin PROPERTY SUFFIX ".gup")
