ADD: Selection Manager and Transform Manager Toolbars have been added. FIX: ZEDGizmo scale problems have been fixed. FIX: ZERayCast modifier bug has been fixed. ADD: ZEDelagete::CheckAndCall function has been added.
svn path=/branches/v0.6.5-Editor/; revision=1981

--- a/Source/ZEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEditor/ZEDCore/CMakeLists.txt
@@ -35,44 +35,55 @@
 
 cmake_minimum_required(VERSION 2.8)
 
-#include_directories("C:/Users/Egemen.Barutcu/Desktop/ZE/branches/v0.6.2-NewEditor/External/Windows-x64-MSVCv110/libQt/include")
+ze_add_source(ZEDCore.cpp								Sources)
+ze_add_source(ZEDCore.h									Sources)
+ze_add_source(ZEDModule.cpp								Sources)
+ze_add_source(ZEDModule.h								Sources)
+ze_add_source(ZEDObjectWrapper.cpp						Sources)
+ze_add_source(ZEDObjectWrapper.h						Sources)
 
-ze_add_source(ZEDOperation.cpp					Sources)
-ze_add_source(ZEDOperation.h					Sources)
-ze_add_source(ZEDOperationManager.cpp			Sources)
-ze_add_source(ZEDOperationManager.h				Sources)
-ze_add_source(ZEDTransformationOperation.cpp	Sources)
-ze_add_source(ZEDTransformationOperation.h		Sources)
-ze_add_source(ZEDGizmo.cpp						Sources)
-ze_add_source(ZEDGizmo.h						Sources)
-ze_add_source(ZEDTransformationManager.cpp		Sources)
-ze_add_source(ZEDTransformationManager.h		Sources)
-ze_add_source(ZEDSceneWrapper.cpp				Sources)
-ze_add_source(ZEDSceneWrapper.h					Sources)
-ze_add_source(ZEDObjectWrapper.cpp				Sources)
-ze_add_source(ZEDObjectWrapper.h				Sources)
-ze_add_source(ZEDSelectionManager.cpp			Sources)
-ze_add_source(ZEDSelectionManager.h				Sources)
-ze_add_source(ZEDEntityWrapper.cpp				Sources)
-ze_add_source(ZEDEntityWrapper.h				Sources)
-ze_add_source(ZEDModule.cpp						Sources)
-ze_add_source(ZEDModule.h						Sources)
-ze_add_source(ZEDCore.cpp						Sources)
-ze_add_source(ZEDCore.h							Sources)
-ze_add_source(ZEDViewport.cpp					Sources)
-ze_add_source(ZEDViewport.h						Sources QtMocs)
-ze_add_source(ZEDViewportInput.cpp				Sources)
-ze_add_source(ZEDViewportInput.h				Sources)
-ze_add_source(ZEDViewportManager.cpp			Sources)
-ze_add_source(ZEDViewportManager.h				Sources)
-ze_add_source(ZEDViewportController.cpp			Sources)
-ze_add_source(ZEDViewportController.h			Sources)
+ze_add_source(ZEDOperation.cpp							Sources)
+ze_add_source(ZEDOperation.h							Sources)
+ze_add_source(ZEDOperationManager.cpp					Sources)
+ze_add_source(ZEDOperationManager.h						Sources)
+
+ze_add_source(ZEDGizmo.cpp								Sources)
+ze_add_source(ZEDGizmo.h								Sources)
+ze_add_source(ZEDTransformationOperation.cpp			Sources)
+ze_add_source(ZEDTransformationOperation.h				Sources)
+ze_add_source(ZEDTransformationManager.cpp				Sources)
+ze_add_source(ZEDTransformationManager.h				Sources)
+ze_add_source(ZEDTransformationManagerToolbar.cpp		Sources)
+ze_add_source(ZEDTransformationManagerToolbar.h			Sources QtMocs)
+ze_add_source(ZEDTransformationManagerToolbar.ui		Sources QtUi)
+
+ze_add_source(ZEDSelectionManager.cpp					Sources)
+ze_add_source(ZEDSelectionManager.h						Sources)
+ze_add_source(ZEDSelectionManagerToolbar.cpp			Sources)
+ze_add_source(ZEDSelectionManagerToolbar.h				Sources QtMocs)
+ze_add_source(ZEDSelectionManagerToolbar.ui				Sources QtUi)
+
+ze_add_source(ZEDViewport.cpp							Sources)
+ze_add_source(ZEDViewport.h								Sources QtMocs)
+ze_add_source(ZEDViewportInput.cpp						Sources)
+ze_add_source(ZEDViewportInput.h						Sources)
+ze_add_source(ZEDViewportManager.cpp					Sources)
+ze_add_source(ZEDViewportManager.h						Sources)
+ze_add_source(ZEDViewportController.cpp					Sources)
+ze_add_source(ZEDViewportController.h					Sources)
+
+ze_add_source(ZEDSceneWrapper.cpp						Sources)
+ze_add_source(ZEDSceneWrapper.h							Sources)
+ze_add_source(ZEDEntityWrapper.cpp						Sources)
+ze_add_source(ZEDEntityWrapper.h						Sources)
 
 qt5_wrap_cpp (QtMocFiles ${QtMocs})
+qt5_wrap_ui (QtUiFiles ${QtUi})
 
 ze_add_library(TARGET ZEDCore 
-	SOURCES ${Sources} 
-	${QtMocFiles} 
+	SOURCES ${Sources} ${QtMocFiles} ${QtUiFiles} 
 	LIBS ZEFoundation)
+
+source_group("Generated" FILES ${QtMocFiles} ${QtUiFiles})
 
 qt5_use_modules(ZEDCore Widgets)
