--- a/Source/ZEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEditor/ZEDCore/CMakeLists.txt
@@ -41,36 +41,52 @@ ze_add_source(ZEDModule.cpp								Sources)
 ze_add_source(ZEDModule.h								Sources)
 ze_add_source(ZEDObjectWrapper.cpp						Sources)
 ze_add_source(ZEDObjectWrapper.h						Sources)
+ze_add_source(ZEDEvent.cpp								Sources)
+ze_add_source(ZEDEvent.h								Sources ZEMC)
+ze_add_source(ZEDComponent.cpp							Sources)
+ze_add_source(ZEDComponent.h							Sources)
 
 ze_add_source(ZEDOperation.cpp							Sources)
 ze_add_source(ZEDOperation.h							Sources)
 ze_add_source(ZEDOperationManager.cpp					Sources)
 ze_add_source(ZEDOperationManager.h						Sources)
 
-ze_add_source(ZEDGizmo.cpp								Sources)
-ze_add_source(ZEDGizmo.h								Sources)
-ze_add_source(ZEDTransformationOperation.cpp			Sources)
-ze_add_source(ZEDTransformationOperation.h				Sources)
 ze_add_source(ZEDTransformationManager.cpp				Sources)
 ze_add_source(ZEDTransformationManager.h				Sources)
+ze_add_source(ZEDTransformationEvent.cpp				Sources)
+ze_add_source(ZEDTransformationEvent.h					Sources ZEMC)
+ze_add_source(ZEDTransformationOperation.cpp			Sources)
+ze_add_source(ZEDTransformationOperation.h				Sources)
 ze_add_source(ZEDTransformationManagerToolbar.cpp		Sources)
 ze_add_source(ZEDTransformationManagerToolbar.h			Sources QtMocs)
-ze_add_source(ZEDTransformationManagerToolbar.ui		Sources QtUi)
+ze_add_source(ZEDTransformationManagerToolbar.ui		Sources QtUI)
+ze_add_source(ZEDGizmo.cpp								Sources)
+ze_add_source(ZEDGizmo.h								Sources)
 
 ze_add_source(ZEDSelectionManager.cpp					Sources)
 ze_add_source(ZEDSelectionManager.h						Sources)
+ze_add_source(ZEDSelectionEvent.cpp						Sources)
+ze_add_source(ZEDSelectionEvent.h						Sources ZEMC)
 ze_add_source(ZEDSelectionManagerToolbar.cpp			Sources)
 ze_add_source(ZEDSelectionManagerToolbar.h				Sources QtMocs)
-ze_add_source(ZEDSelectionManagerToolbar.ui				Sources QtUi)
+ze_add_source(ZEDSelectionManagerToolbar.ui				Sources QtUI)
 
 ze_add_source(ZEDViewport.cpp							Sources)
 ze_add_source(ZEDViewport.h								Sources QtMocs)
-ze_add_source(ZEDViewportInput.cpp						Sources)
-ze_add_source(ZEDViewportInput.h						Sources)
+ze_add_source(ZEDViewportEvent.cpp						Sources)
+ze_add_source(ZEDViewportEvent.h						Sources ZEMC)
 ze_add_source(ZEDViewportManager.cpp					Sources)
 ze_add_source(ZEDViewportManager.h						Sources)
 ze_add_source(ZEDViewportController.cpp					Sources)
 ze_add_source(ZEDViewportController.h					Sources)
+
+ze_add_source(ZEDMainWindow.cpp							Sources)
+ze_add_source(ZEDMainWindow.h							Sources QtMocs)
+ze_add_source(ZEDMainWindow.ui							Sources QtUI)
+
+ze_add_source(ZEDObjectBrowser.cpp						Sources)
+ze_add_source(ZEDObjectBrowser.h						Sources QtMocs)
+ze_add_source(ZEDObjectBrowser.ui						Sources QtUI)
 
 ze_add_source(ZEDSceneWrapper.cpp						Sources)
 ze_add_source(ZEDSceneWrapper.h							Sources)
@@ -78,9 +94,10 @@ ze_add_source(ZEDEntityWrapper.cpp						Sources)
 ze_add_source(ZEDEntityWrapper.h						Sources)
 
 qt5_wrap_cpp (QtMocFiles ${QtMocs})
-qt5_wrap_ui (QtUiFiles ${QtUi})
+qt5_wrap_ui (QtUiFiles ${QtUI})
 
 ze_add_library(TARGET ZEDCore 
+	ZEMC ${ZEMC}
 	SOURCES ${Sources} ${QtMocFiles} ${QtUiFiles} 
 	LIBS ZEFoundation)
 
