CHG: ZETIIntegirty source have been moved from ZELNLauncher into its own folder in ZEFoundation.
svn path=/branches/v0.6.2-Graphics/; revision=1990

--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -58,6 +58,7 @@ add_subdirectory(ZECompression)
 add_subdirectory(ZEProtect)
 add_subdirectory(ZEMeta)
 add_subdirectory(ZEPointer)
+add_subdirectory(ZEITIntegrity)
 
 ze_add_source(ZEAutoExp.txt				Sources Headers)
 ze_add_source(ZEData.h 					Sources Headers)
