--- a/Source/ZELNLauncher/CMakeLists.txt
+++ b/Source/ZELNLauncher/CMakeLists.txt
@@ -72,12 +72,6 @@ ze_add_source(ZELNLicenseEditorDialog.ui		Source QtUIs)
 ze_add_source(ZELNIntegrityModule.cpp			Sources)
 ze_add_source(ZELNIntegrityModule.h				Sources QtMocs)
 ze_add_source(ZELNIntegrityWidget.ui			Sources QtUIs)
-ze_add_source(ZEITIntegrityChecker.cpp			Sources)
-ze_add_source(ZEITIntegrityChecker.h			Sources Headers)
-ze_add_source(ZEITIntegrityGenerator.cpp		Sources)
-ze_add_source(ZEITIntegrityGenerator.h			Sources Headers)
-ze_add_source(ZEITIntegrityRecord.cpp			Sources)
-ze_add_source(ZEITIntegrityRecord.h				Sources Headers)
 
 ze_add_source(ZELNUpdateModule.cpp				Sources)
 ze_add_source(ZELNUpdateModule.h				Sources)
@@ -104,7 +98,7 @@ qt5_add_resources(QtResourceOutputs ${QtResources})
 
 ze_add_executable(TARGET ZELNLauncher 
 	SOURCES ${Sources} ${QtMocOutputs} ${QtUIOutputs} ${QtResourceOutputs}
-	LIBS ZEFoundation ZEProtect libCryptopp Qt5::WinMain
+	LIBS ZEFoundation ZEProtect ZEITIntegrity libCryptopp Qt5::WinMain
 	DESCRIPTION "Zinek Launcher")
 
 qt5_use_modules(ZELNLauncher Core Widgets)
