--- a/Source/ZEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEditor/ZEDCore/CMakeLists.txt
@@ -57,9 +57,9 @@ ze_add_source(ZEDTransformationEvent.cpp				Sources)
 ze_add_source(ZEDTransformationEvent.h					Sources ZEMC)
 ze_add_source(ZEDTransformationOperation.cpp			Sources)
 ze_add_source(ZEDTransformationOperation.h				Sources)
-ze_add_source(ZEDTransformationManagerToolbar.cpp		Sources)
-ze_add_source(ZEDTransformationManagerToolbar.h			Sources QtMocs)
-ze_add_source(ZEDTransformationManagerToolbar.ui		Sources QtUI)
+ze_add_source(ZEDTransformationToolbar.cpp				Sources)
+ze_add_source(ZEDTransformationToolbar.h				Sources QtMocs)
+ze_add_source(ZEDTransformationToolbar.ui				Sources QtUI)
 ze_add_source(ZEDGizmo.cpp								Sources)
 ze_add_source(ZEDGizmo.h								Sources)
 
@@ -67,9 +67,9 @@ ze_add_source(ZEDSelectionManager.cpp					Sources)
 ze_add_source(ZEDSelectionManager.h						Sources)
 ze_add_source(ZEDSelectionEvent.cpp						Sources)
 ze_add_source(ZEDSelectionEvent.h						Sources ZEMC)
-ze_add_source(ZEDSelectionManagerToolbar.cpp			Sources)
-ze_add_source(ZEDSelectionManagerToolbar.h				Sources QtMocs)
-ze_add_source(ZEDSelectionManagerToolbar.ui				Sources QtUI)
+ze_add_source(ZEDSelectionToolbar.cpp					Sources)
+ze_add_source(ZEDSelectionToolbar.h						Sources QtMocs)
+ze_add_source(ZEDSelectionToolbar.ui						Sources QtUI)
 
 ze_add_source(ZEDViewport.cpp							Sources)
 ze_add_source(ZEDViewport.h								Sources QtMocs)
@@ -86,7 +86,30 @@ ze_add_source(ZEDMainWindow.ui							Sources QtUI)
 
 ze_add_source(ZEDObjectBrowser.cpp						Sources)
 ze_add_source(ZEDObjectBrowser.h						Sources QtMocs)
-ze_add_source(ZEDObjectBrowser.ui						Sources QtUI)
+
+ze_add_source(ZEDPropertyEditor.cpp						Sources)
+ze_add_source(ZEDPropertyEditor.h						Sources Headers QtMocs)
+ze_add_source(ZEDPropertyEditorItem.cpp					Sources)
+ze_add_source(ZEDPropertyEditorItem.h					Sources Headers)
+ze_add_source(ZEDPropertyEditorItemInteger.cpp			Sources)
+ze_add_source(ZEDPropertyEditorItemInteger.h			Sources QtMocs)
+ze_add_source(ZEDPropertyEditorItemFloat.cpp			Sources)
+ze_add_source(ZEDPropertyEditorItemFloat.h				Sources QtMocs)
+ze_add_source(ZEDPropertyOperation.cpp					Sources)
+ze_add_source(ZEDPropertyOperation.h					Sources Header)
+#ze_add_source(ZEDPropertyEditorItemFloat.cpp			Sources)
+#ze_add_source(ZEDPropertyEditorItemFloat.h				Sources)
+#ze_add_source(ZEDPropertyEditorItemBoolean.cpp			Sources)
+#ze_add_source(ZEDPropertyEditorItemBoolean.h			Sources)
+#ze_add_source(ZEDPropertyEditorItemString.cpp			Sources)
+#ze_add_source(ZEDPropertyEditorItemString.h			Sources)
+#ze_add_source(ZEDPropertyEditorItemEnumurator.cpp		Sources)
+#ze_add_source(ZEDPropertyEditorItemEnumurator.h		Sources)
+#ze_add_source(ZEDPropertyEditorItemVector.cpp			Sources)
+#ze_add_source(ZEDPropertyEditorItemVector.h			Sources)
+#ze_add_source(ZEDPropertyEditorItemMatrix.cpp			Sources)
+#ze_add_source(ZEDPropertyEditorItemMatrix.h			Sources)
+
 
 ze_add_source(ZEDSceneWrapper.cpp						Sources)
 ze_add_source(ZEDSceneWrapper.h							Sources)
