ADD: ZEDPropertyEditor has been further improved. ADD: Vector, Matrix, String, Enumurator, Boolean support have been added ZEDPropertyEditor. ADD: ZEVariant::IsUndefined function has been added. FIX: ZEClass::GetName now returns ZEObject.
svn path=/branches/v0.6.5-Editor/; revision=1998

--- a/Source/ZEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEditor/ZEDCore/CMakeLists.txt
@@ -69,7 +69,7 @@ ze_add_source(ZEDSelectionEvent.cpp						Sources)
 ze_add_source(ZEDSelectionEvent.h						Sources ZEMC)
 ze_add_source(ZEDSelectionToolbar.cpp					Sources)
 ze_add_source(ZEDSelectionToolbar.h						Sources QtMocs)
-ze_add_source(ZEDSelectionToolbar.ui						Sources QtUI)
+ze_add_source(ZEDSelectionToolbar.ui					Sources QtUI)
 
 ze_add_source(ZEDViewport.cpp							Sources)
 ze_add_source(ZEDViewport.h								Sources QtMocs)
@@ -91,24 +91,18 @@ ze_add_source(ZEDPropertyEditor.cpp						Sources)
 ze_add_source(ZEDPropertyEditor.h						Sources Headers QtMocs)
 ze_add_source(ZEDPropertyEditorItem.cpp					Sources)
 ze_add_source(ZEDPropertyEditorItem.h					Sources Headers)
-ze_add_source(ZEDPropertyEditorItemInteger.cpp			Sources)
-ze_add_source(ZEDPropertyEditorItemInteger.h			Sources QtMocs)
-ze_add_source(ZEDPropertyEditorItemFloat.cpp			Sources)
-ze_add_source(ZEDPropertyEditorItemFloat.h				Sources QtMocs)
+ze_add_source(ZEDPropertyEditorItemNumeric.cpp			Sources)
+ze_add_source(ZEDPropertyEditorItemNumeric.h			Sources QtMocs)
+ze_add_source(ZEDPropertyEditorItemBoolean.cpp			Sources)
+ze_add_source(ZEDPropertyEditorItemBoolean.h			Sources QtMocs)
+ze_add_source(ZEDPropertyEditorItemString.cpp			Sources)
+ze_add_source(ZEDPropertyEditorItemString.h				Sources QtMocs)
+ze_add_source(ZEDPropertyEditorItemEnumurator.cpp		Sources)
+ze_add_source(ZEDPropertyEditorItemEnumurator.h			Sources QtMocs)
+ze_add_source(ZEDPropertyEditorItemVector.cpp			Sources)
+ze_add_source(ZEDPropertyEditorItemVector.h				Sources QtMocs)
 ze_add_source(ZEDPropertyOperation.cpp					Sources)
 ze_add_source(ZEDPropertyOperation.h					Sources Header)
-#ze_add_source(ZEDPropertyEditorItemFloat.cpp			Sources)
-#ze_add_source(ZEDPropertyEditorItemFloat.h				Sources)
-#ze_add_source(ZEDPropertyEditorItemBoolean.cpp			Sources)
-#ze_add_source(ZEDPropertyEditorItemBoolean.h			Sources)
-#ze_add_source(ZEDPropertyEditorItemString.cpp			Sources)
-#ze_add_source(ZEDPropertyEditorItemString.h			Sources)
-#ze_add_source(ZEDPropertyEditorItemEnumurator.cpp		Sources)
-#ze_add_source(ZEDPropertyEditorItemEnumurator.h		Sources)
-#ze_add_source(ZEDPropertyEditorItemVector.cpp			Sources)
-#ze_add_source(ZEDPropertyEditorItemVector.h			Sources)
-#ze_add_source(ZEDPropertyEditorItemMatrix.cpp			Sources)
-#ze_add_source(ZEDPropertyEditorItemMatrix.h			Sources)
 
 
 ze_add_source(ZEDSceneWrapper.cpp						Sources)
@@ -117,13 +111,13 @@ ze_add_source(ZEDEntityWrapper.cpp						Sources)
 ze_add_source(ZEDEntityWrapper.h						Sources)
 
 qt5_wrap_cpp (QtMocFiles ${QtMocs})
-qt5_wrap_ui (QtUiFiles ${QtUI})
+qt5_wrap_ui (QtUIFiles ${QtUI})
 
 ze_add_library(TARGET ZEDCore 
 	ZEMC ${ZEMC}
-	SOURCES ${Sources} ${QtMocFiles} ${QtUiFiles} 
+	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} 
 	LIBS ZEFoundation)
 
-source_group("Generated" FILES ${QtMocFiles} ${QtUiFiles})
+source_group("Generated" FILES ${QtMocFiles} ${QtUIFiles})
 
 qt5_use_modules(ZEDCore Widgets)
