ADD: ZERNSamplers.hlsl that defines common samplers has been added. CHG: Shader files using common samplers have been changed to include ZERNSamplers.hlsl. IMP: All shading related functions and variables have been implemented on ZERNShading.hlsl. CHG: ZERNDeferredShading.hlsl has been changed to draw instanced light geometries. IMP: Rendering transparent objects has been implemented on ZERNSimpleMaterial.hlsl IMP: Outputting tile-light list has been implemented on ZERNTiledDeferredShadingCompute.hlsl. IMP: Point and projective lights have been separately culled on ZERNTiledDeferredShadingCompute.hlsl. CHG: Shadow casting has been disabled for grass on ZETIResources. CHG: Main context has been set to renderer during initializing of ZETIViewport. CHG: SetSamplers api calls that set common samplers have been removed. IMP: Setting common samplers only once has been implemented on ZERNRenderer. CHG: ZEGrid has been changed to use simple material. IMP: Checking out whether structured buffers are bound as both input and output has been implemented on ZEGRContext. CHG: Sampler and texture max slot count have been doubled on ZEGRDefinitions.h. IMP: Storing bound stages of a structured buffer has been implemented on ZEGRStructuredBuffer. IMP: Reversing draw order of transparent meshes has been implemented on ZEModelMesh. CHG: Main context has been set to renderer during initializing of ZELight. CHG: Sample count and length properties have been added to per cascade on ZELightDirectional. CHG: ZERNFixedMaterial has been changed to handle both opaque and transparent objects. IMP: Gamma correction has been disabled for normal maps. CHG: ZERNSimpleMaterial has been changed to handle both opaque and transparent objects. IMP: Rendering transparent objects has been implemented on ZERNStageForward. CHG: ZERNStageLighting has been changed to fill light buffers for deferred and forward rendering. IMP: Drawing instanced light geometries has been implemented on ZERNStageLighting. ADD: St

--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -71,7 +71,7 @@ ze_add_source(ZERNShaderSlots.h 					Sources Headers)
 ze_add_source(ZERNMaterial.cpp 						Sources)
 ze_add_source(ZERNMaterial.h 						Sources Headers ZEMC)
 ze_add_source(ZERNSimpleMaterial.cpp 				Sources)
-ze_add_source(ZERNSimpleMaterial.h 					Sources Headers)
+ze_add_source(ZERNSimpleMaterial.h 					Sources Headers ZEMC)
 ze_add_source(ZERNFixedMaterial.cpp 				Sources)
 ze_add_source(ZERNFixedMaterial.h 					Sources Headers ZEMC)
 ze_add_source(ZERNParticleMaterial.cpp 				Sources)
@@ -119,6 +119,8 @@ ze_add_source(ZERNStage2D.h 						Sources Headers ZEMC)
 ze_add_source(ZERNStage2D.cpp						Sources)
 ze_add_source(ZERNStageResolving.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStageResolving.cpp				Sources)
+ze_add_source(ZERNStageRenderDepth.h 				Sources Headers ZEMC)
+ze_add_source(ZERNStageRenderDepth.cpp				Sources)
 
 ze_add_library(TARGET ZERenderer 
 	SOURCES ${Sources}
