MOD: ZEITIntegrity class names have been refactored. ADD: New tool for ZEITIntegrity has been added. ADD: Common theme and icon resources for Qt UI applications has been added.
svn path=/branches/v0.6.2-Graphics/; revision=2004

--- a/Source/ZELNLauncher/CMakeLists.txt
+++ b/Source/ZELNLauncher/CMakeLists.txt
@@ -97,7 +97,7 @@ ze_add_executable(TARGET ZELNLauncher
 	LIBS ZEFoundation ZEProtect ZEITIntegrity libCryptopp Qt5::WinMain
 	DESCRIPTION "Zinek Launcher")
 
-qt5_use_modules(ZELNLauncher Core Widgets)
+qt5_use_modules(ZELNLauncher Widgets)
 
 add_custom_command(TARGET ZELNLauncher POST_BUILD
 	# DEBUG
