--- a/Source/ZETools/CMakeLists.txt
+++ b/Source/ZETools/CMakeLists.txt
@@ -48,5 +48,6 @@ ze_add_module(ZESceneConverter)
 ze_add_module(ZEMLEditor)
 ze_add_module(ZETerrainExporter)
 ze_add_module(ZELCLicenseTool)
+ze_add_module(ZEITIntegrityTool)
 
 ze_add_cmake_project(ZETools)
