--- a/Source/ZEditor/ZEDConsole/CMakeLists.txt
+++ b/Source/ZEditor/ZEDConsole/CMakeLists.txt
@@ -62,23 +62,20 @@ add_custom_command(
 	MAIN_DEPENDENCY "${CMAKE_CURRENT_SOURCE_DIR}/ZEMTInterpreterLexer.l"
 	WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
 
-ze_add_source("${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterLexer.l.cpp" Sources)
-
 
 # LEMON
 #######################################################
 
 add_custom_command(
-	OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterParser.y.tmp" "${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterParser.y.c" "${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterParser.y.h"
+	OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterParser.y.tmp" "${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterParser.y.cpp" "${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterParser.y.h"
 	COMMAND "${CMAKE_COMMAND}"
 		ARGS "-E" "copy_if_different" "${CMAKE_CURRENT_SOURCE_DIR}/ZEMTInterpreterParser.y" "${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterParser.y.tmp"
 	COMMAND "${CMAKE_SOURCE_DIR}/Tool/lemon.exe" 
 		ARGS "${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterParser.y.tmp"
+	COMMAND "${CMAKE_COMMAND}"
+		ARGS "-E" "copy_if_different" "${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterParser.y.c" "${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterParser.y.cpp"
 	MAIN_DEPENDENCY "${CMAKE_CURRENT_SOURCE_DIR}/ZEMTInterpreterParser.y"
 	WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
-	
-ze_add_source("${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterParser.y.c" Sources)
-ze_add_source("${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterParser.y.h" Sources)
 	
 ze_add_executable(TARGET ZEDConsole 
 	ZEMC ${ZEMC}
@@ -89,7 +86,7 @@ source_group("Generated" FILES
 	${QtMocFiles} 
 	${QtUiFiles}
 	"${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterLexer.l.cpp"
-	"${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterParser.y.c"
+	"${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterParser.y.cpp"
 	"${CMAKE_CURRENT_BINARY_DIR}/ZEMTInterpreterParser.y.h")
 
 qt5_use_modules(ZEDConsole Widgets)
