FIX: Fixed various problems has been fixed and improvemenets has been made on ZEITIntegrity and ZEITIntegrtiy launcher modules.
svn path=/branches/v0.6.2-Graphics/; revision=2006

--- a/Source/ZELNLauncher/CMakeLists.txt
+++ b/Source/ZELNLauncher/CMakeLists.txt
@@ -69,6 +69,8 @@ ze_add_source(ZELNLicenseEditorDialog.ui		Source QtUIs)
 
 ze_add_source(ZELNIntegrityModule.cpp			Sources)
 ze_add_source(ZELNIntegrityModule.h				Sources QtMocs)
+ze_add_source(ZELNIntegrityWorker.cpp			Sources)
+ze_add_source(ZELNIntegrityWorker.h				Sources QtMocs)
 ze_add_source(ZELNIntegrityWidget.ui			Sources QtUIs)
 
 ze_add_source(ZELNUpdateModule.cpp				Sources)
